# what-todo-django

./: .gitignore  README.md  pyproject.toml
project/: settings.py  urls.py
todo/: admin.py  models.py  settings.py  tests.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: base.html  detail.html  list-delete.html  list.html  task.html
