[tool.poetry]
name = "what-todo-django"
version = "0.1.0"
description = ""
authors = ["Ron Southwick <ronlsouthwick@gmail.com>"]
readme = "README.md"
packages = [{include = "what_todo_django"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
django-autoslug = "^1.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
